force-app/main/default/objects/Recognized_Visits__c/Recognized_Visits__c.object-meta.xml
<CustomObject>
    <label>Recognized Visit</label>
    <nameField>
        <label>Recognized Visits Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recognized Visits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>