force-app/main/default/objects/Recognized_Visits__c/fields/Customer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Contact</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Recognized Visits</relationshipLabel>
    <relationshipName>Recognized_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>