force-app/main/default/objects/Recognized_Visits__c/fields/full_URL__c.field-meta.xml
<CustomField>
    <fullName>full_URL__c</fullName>
    <label>Full Url</label>
    <type>Url</type>
</CustomField>