force-app/main/default/objects/Recognized_Visits__c/fields/landing_page__c.field-meta.xml
<CustomField>
    <fullName>landing_page__c</fullName>
    <label>Landing Page</label>
    <length>255</length>
    <type>Text</type>
</CustomField>