force-app/main/default/objects/Recognized_Visits__c/fields/Landing_Page_Url__c.field-meta.xml
<CustomField>
    <fullName>Landing_Page_Url__c</fullName>
    <label>Landing Page Url</label>
    <type>Url</type>
</CustomField>