force-app/main/default/objects/Recognized_Visits__c/fields/Recognized_Visit_Device__c.field-meta.xml
<CustomField>
    <fullName>Recognized_Visit_Device__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recognized Visit Device</label>
    <referenceTo>Recognized_Visit_Device__c</referenceTo>
    <relationshipLabel>Recognized Visits</relationshipLabel>
    <relationshipName>Recognized_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>