force-app/main/default/objects/Recognized_Visits__c/fields/referral_domain__c.field-meta.xml
<CustomField>
    <fullName>referral_domain__c</fullName>
    <label>Referral Domain</label>
    <type>Url</type>
</CustomField>