force-app/main/default/objects/Recognized_Visits__c/fields/referral_page__c.field-meta.xml
<CustomField>
    <fullName>referral_page__c</fullName>
    <label>Referral Page</label>
    <type>Url</type>
</CustomField>