force-app/main/default/objects/Recognized_Visits__c/fields/User_Device__c.field-meta.xml
<CustomField>
    <fullName>User_Device__c</fullName>
    <label>User Device</label>
    <length>80</length>
    <type>Text</type>
</CustomField>