force-app/main/default/objects/Recognized_Visits__c/fields/User_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>User_Email_Address__c</fullName>
    <label>User Email Address</label>
    <required>true</required>
    <type>Email</type>
</CustomField>