force-app/main/default/objects/Recognized_Visits__c/fields/User_Fingerprint__c.field-meta.xml
<CustomField>
    <fullName>User_Fingerprint__c</fullName>
    <label>User Fingerprint</label>
    <length>80</length>
    <type>Text</type>
</CustomField>