force-app/main/default/objects/Recognized_Visits__c/fields/User_Operating_System__c.field-meta.xml
<CustomField>
    <fullName>User_Operating_System__c</fullName>
    <label>User Operating System</label>
    <length>80</length>
    <type>Text</type>
</CustomField>