force-app/main/default/objects/Recognized_Visits__c/fields/utm_campaign__c.field-meta.xml
<CustomField>
    <fullName>utm_campaign__c</fullName>
    <label>Utm Campaign</label>
    <length>80</length>
    <type>Text</type>
</CustomField>