force-app/main/default/objects/Recognized_Visits__c/fields/utm_content__c.field-meta.xml
<CustomField>
    <fullName>utm_content__c</fullName>
    <label>Utm Content</label>
    <length>80</length>
    <type>Text</type>
</CustomField>