force-app/main/default/objects/Recognized_Visits__c/fields/utm_medium__c.field-meta.xml
<CustomField>
    <fullName>utm_medium__c</fullName>
    <label>Utm Medium</label>
    <length>80</length>
    <type>Text</type>
</CustomField>