force-app/main/default/objects/Recognized_Visits__c/fields/utm_source__c.field-meta.xml
<CustomField>
    <fullName>utm_source__c</fullName>
    <label>Utm Source</label>
    <length>80</length>
    <type>Text</type>
</CustomField>