force-app/main/default/objects/Recognized_Visits__c/fields/Utm_Term__c.field-meta.xml
<CustomField>
    <fullName>Utm_Term__c</fullName>
    <label>Utm Term</label>
    <length>80</length>
    <type>Text</type>
</CustomField>