force-app/main/default/objects/Recognized_Visits__c/fields/utm_text__c.field-meta.xml
<CustomField>
    <fullName>utm_text__c</fullName>
    <label>utm_text</label>
    <length>80</length>
    <type>Text</type>
</CustomField>