force-app/main/default/objects/Recognized_Visits__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Date_and_Time__c</columns>
    <columns>NAME</columns>
    <columns>User_Email_Address__c</columns>
    <columns>User_Device__c</columns>
    <columns>User_Operating_System__c</columns>
    <columns>User_Fingerprint__c</columns>
    <columns>utm_source__c</columns>
    <columns>Customer_Contact__c</columns>
    <columns>Lead__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>